tests/pass/LeftShift.java
// File 	: LeftShift.java
// Created 	: 06.03.2020
// Author 	: Ahmed Khalil

package pass;

public class LeftShift {
	static public int leftshift(int x, int y){
		return x << y;
	}
}