tests/fail/LeftShift.java
// File 	: LeftShift.java
// Created 	: 06.03.2020
// Author 	: Ahmed Khalil

package fail;

import java.lang.System;

public class LeftShift {
	public static void main(String[] args) {
		System.out.println('a' << 42);
	}
}